--- a/view/page/register/inbox.html
+++ b/view/page/register/inbox.html
@@ -111,7 +111,7 @@
         <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
-        <li><i class="fa fa-server"></i> Daftar Berkas</li>
+        <li><i class="fa fa-files-o" aria-hidden="true"></i> Daftar Berkas</li>
         <li class="active"> {{ page['title'] }}</li>
     </ol>
 </section>
