--- a/view/index.html
+++ b/view/index.html
@@ -92,21 +92,21 @@ class="hold-transition skin-blue fixed sidebar-mini"
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-user-circle" aria-hidden="true"></i>
-                        <span>Data Pegawai</span>
+                        <span>Akun Saya</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                         </span>
                     </a>
                     <ul class="treeview-menu">
                         <li class=""><a href="#"><i class="fa fa-circle-o"></i>Profile</a></li>
-                        <li class=""><a href="#"><i class="fa fa-circle-o"></i>Berkas Masuk</a></li>
+                        <li class=""><a href="#"><i class="fa fa-circle-o"></i>Ganti Password</a></li>
                     </ul>
                 </li>
 
                 <!-- ./Compose -->
                 <li class="treeview">
                     <a href="#">
-                        <i class="fa fa-file-o" aria-hidden="true"></i>
+                        <i class="fa fa-sign-in" aria-hidden="true"></i>
                         <span>Register Masuk</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
@@ -121,7 +121,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                 <!-- ./Register Berkas -->
                 <li class="treeview">
                     <a href="#">
-                        <i class="fa fa-server" aria-hidden="true"></i>
+                        <i class="fa fa-files-o" aria-hidden="true"></i>
                         <span>Tunggakan Berkas</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
@@ -135,7 +135,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
 
                 <li class="treeview">
                     <a href="#">
-                        <i class="fa fa-delicious" aria-hidden="true"></i>
+                        <i class="fa fa-font-awesome" aria-hidden="true"></i>
                         <span>Register Keluar</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
@@ -143,7 +143,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                     </a>
                     <ul class="treeview-menu">
                         <li class=""><a href="#"><i class="fa fa-circle-o"></i>Finnish</a></li>
-                        <li class=""><a href="#"><i class="fa fa-circle-o"></i>Daftar Berkas</a></li>
+                        <li class=""><a href="#"><i class="fa fa-circle-o"></i>Daftar Berkas Keluar</a></li>
                     </ul>
                 </li>
 
