--- a/view/index.html
+++ b/view/index.html
@@ -133,6 +133,20 @@ class="hold-transition skin-blue fixed sidebar-mini"
                     </ul>
                 </li>
 
+                <!-- ./Register Berkas Keluar -->
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-flag" aria-hidden="true"></i>
+                        <span>Register Keluar</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li class=""><a href="/register/finnish"><i class="fa fa-circle-o"></i> Table Finnish</a></li>
+                    </ul>
+                </li>
+
                 <!-- ./Administrator -->
                 <li class="treeview">
                     <a href="#">
