--- a/view/page/register/finnish.html
+++ b/view/page/register/finnish.html
@@ -5,8 +5,6 @@
 <link rel="stylesheet" href="{{ static_url('vendor/bootstrap/dist/css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/font-awesome/css/font-awesome.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/waitme/waitMe.css') }}">
-<link rel="stylesheet" href="{{ static_url('vendor/select2/dist/css/select2.css') }}">
-<link rel="stylesheet" href="{{ static_url('vendor/select2/dist/css/select2-bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/datatables.net-bs/css/dataTables.bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/Responsive-2.2.2/css/responsive.dataTables.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/Responsive-2.2.2/css/responsive.bootstrap.css') }}">
@@ -22,7 +20,6 @@
 {{ escape(handler.settings["title"]) }} | {{ page['title'] }}
 {% end %}
 
-
 <!-- ANCHOR: Module JS inbox.html -->
 {% block js %}
 <script src="{{ static_url('vendor/jquery/dist/jquery.js') }}"></script>
@@ -30,7 +27,6 @@
 <script src="{{ static_url('vendor/jQuery.print/jQuery.print.js')  }}"></script>
 <script src="{{ static_url('vendor/jquery-validation/dist/jquery.validate.js') }}"></script>
 <script src="{{ static_url('vendor/waitme/waitMe.js') }} }}"></script>
-<script src="{{  static_url('vendor/select2/dist/js/select2.full.js') }}"></script>
 <script src="{{ static_url('vendor/datatables.net/js/jquery.dataTables.js') }}"></script>
 <script src="{{ static_url('vendor/datatables.net-bs/js/dataTables.bootstrap.js') }}"></script>
 <script src="{{ static_url('vendor/Responsive-2.2.2/js/dataTables.responsive.js') }} }}"></script>
@@ -43,7 +39,7 @@
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootbox/bootbox.js') }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
-<script src="{{ static_url('js/page/register/inbox.js')}}"></script>
+<script src="{{ static_url('js/page/register/finnish.js') }}"></script>
 <style>
     .error {
         color: #dd4b39 !important;
@@ -64,18 +60,21 @@
         color: rgb(255, 255, 255);
         padding: 10px;
     }
-    .alert-info > [data-notify="icon"] {
+
+    .alert-info>[data-notify="icon"] {
         height: 50px;
         margin-right: 12px;
     }
-    .alert-info > [data-notify="title"] {
+
+    .alert-info>[data-notify="title"] {
         color: rgb(255, 255, 255);
         display: block;
         font-weight: bold;
         margin-bottom: 5px;
         font-size: 130%;
     }
-    .alert-info > [data-notify="message"] {
+
+    .alert-info>[data-notify="message"] {
         font-size: 115%;
     }
 
@@ -87,19 +86,26 @@
         color: rgb(255, 255, 255);
         padding: 10px;
     }
-    .alert-minimalist > [data-notify="icon"] {
+
+    .alert-minimalist>[data-notify="icon"] {
         height: 50px;
         margin-right: 12px;
     }
-    .alert-minimalist > [data-notify="title"] {
+
+    .alert-minimalist>[data-notify="title"] {
         color: rgb(255, 255, 255);
         display: block;
         font-weight: bold;
         margin-bottom: 5px;
         font-size: 130%;
     }
-    .alert-minimalist > [data-notify="message"] {
+
+    .alert-minimalist>[data-notify="message"] {
         font-size: 115%;
+    }
+
+    button.btn-space {
+        margin-bottom: 5px;
     }
 </style>
 {% end %}
@@ -111,7 +117,7 @@
         <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
-        <li><i class="fa fa-files-o" aria-hidden="true"></i> Tunggakan Berkas</li>
+        <li><i class="fa fa-sign-in" aria-hidden="true"></i> Register Keluar</li>
         <li class="active"> {{ page['title'] }}</li>
     </ol>
 </section>
@@ -122,10 +128,10 @@
             <li class="active"><a href="#tabPencarian" data-toggle="tab" aria-expanded="true">Pencarian</a></li>
             <li class=""><a href="#tabDetail" data-toggle="tab" aria-expanded="false">Detail</a></li>
         </ul>
-    
+
         <div class="tab-content">
             <div class="tab-pane active" id="tabPencarian">
-                <div class="form-horizontal" id="formFindBerkas" method="POST">
+                <form class="form-horizontal" id="formCariBerkas" method="POST">
                     {% module xsrf_form_html() %}
                     <div class="box-body">
                         <div class="form-group">
@@ -140,15 +146,15 @@
                                 <div class="input-group input-group-md">
                                     <input type="text" class="form-control" id="tahunBerkas" name="tahunBerkas">
                                     <span class="input-group-btn">
-                                        <button id="btnFindBerkas" type="submit" class="btn btn-success btn-flat"> <i class="fa fa-filter" aria-hidden="true"></i> Cari Berkas</button>
+                                        <button id="btnFindBerkas" type="submit" class="btn btn-success btn-flat"> <iclass="fa fa-filter" aria-hidden="true"></i> Cari Berkas</button>
                                     </span>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!-- /.box-body -->
-                </div>
-    
+                </form>
+
                 <div class="box box-solid">
                     <div class="box-body">
                         <!-- Table Register Berkas -->
@@ -156,13 +162,16 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>No</th>
+                                    <th>Register</th>
+                                    <th>Tanggal Register</th>
+                                    <th>Petugas Register</th>
                                     <th>Nomor Berkas</th>
                                     <th>Tahun Berkas</th>
-                                    <th>Tanggal Kirim</th>
-                                    <th>Pengirim</th>
+                                    <th>Kecamatan</th>
+                                    <th>Desa</th>
                                     <th>Kegiatan</th>
                                     <th>Prosedur</th>
+                                    <th>Status</th>
                                     <th></th>
                                 </tr>
                             </thead>
@@ -178,7 +187,7 @@
                 <div id="berkasView">
                     <div class="error-content">
                         <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
-            
+
                         <p class="text-center">
                             We could not find the page you were looking for.
                         </p>
@@ -188,9 +197,4 @@
         </div>
     </div>
 </section>
-
-<div class="modal fade" data-remote="false" id="modal-messange" data-backdrop="false">
-    <div class="modal-dialog" id="messange-dialog">
-    </div>
-</div>
 {% end %}
