--- a/view/page/register/finnish.html
+++ b/view/page/register/finnish.html
@@ -163,8 +163,8 @@
                                 <tr>
                                     <th>ID</th>
                                     <th>Register</th>
-                                    <th>Tanggal Register</th>
-                                    <th>Petugas Register</th>
+                                    <th>Tanggal Keluar</th>
+                                    <th>Petugas Penerima</th>
                                     <th>Nomor Berkas</th>
                                     <th>Tahun Berkas</th>
                                     <th>Kecamatan</th>
