--- a/view/index.html
+++ b/view/index.html
@@ -114,7 +114,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                     </a>
                     <ul class="treeview-menu">
                         <li class=""><a href="/register/compose"><i class="fa fa-circle-o"></i>Compose</a></li>
-                        <li class=""><a href="/register/compose/list"><i class="fa fa-circle-o"></i>Table Compose</a></li>
+                        <li class=""><a href="/register/compose/list"><i class="fa fa-circle-o"></i>Tabel Berkas Masuk</a></li>
                     </ul>
                 </li>
 
@@ -143,7 +143,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li class=""><a href="/register/finnish"><i class="fa fa-circle-o"></i> Table Finnish</a></li>
+                        <li class=""><a href="/register/finnish"><i class="fa fa-circle-o"></i> Tabel Berkas Keluar</a></li>
                     </ul>
                 </li>
 
