--- a/view/page/home/dashboard.html
+++ b/view/page/home/dashboard.html
@@ -37,7 +37,7 @@
 
                 <div class="info-box-content">
                     <span class="info-box-text">Berkas Masuk</span>
-                    <span class="info-box-number">{{ berkas['masuk'] }} <small> Berkas</small></span>
+                    <span class="info-box-number"><small>{{ berkas['masuk_harini'] }} berkas hari ini </small><br> {{ berkas['masuk'] }} Berkas</span class="info-box-number">
                 </div>
                 <!-- /.info-box-content -->
             </div>
@@ -70,7 +70,7 @@
         
                 <div class="info-box-content">
                     <span class="info-box-text">Berkas Selesai</span>
-                    <span class="info-box-number">{{ berkas['selesai'] }} <small> Berkas</small></span>
+                    <span class="info-box-number"><small>{{ berkas['selesai_hariini'] }} berkas hari ini</small> <br> {{ berkas['selesai'] }} Berkas </span class="info-box-number">
                 </div>
                 <!-- /.info-box-content -->
             </div>
@@ -80,11 +80,11 @@
         <div class="box-body">
             <div class="row">
                 <div class="col-sm-12">
-                    <h4> <strong>Update Data:   {{ datetime.datetime.now().strftime('%d/%m/%Y, %H:%M:%S') }}</strong> </h4>
+                    <h4> <strong>Update Data Perjalanan Berkas:   {{ datetime.datetime.now().strftime('%d/%m/%Y, %H:%M:%S') }}</strong> </h4>
                 </div>
                 <div class="col-sm-12">
                     <div class="table-responsive">
-                        <table  class="table table-bordered" role="grid" >
+                        <table  class="table table-bordered table-striped" role="grid" >
                             <tbody>
                                 <tr class="bg-gray">
                                     <th class="text-center">NAMA PETUGAS</th>
@@ -95,10 +95,10 @@
                                 {% if cal_berkas != None %}
                                     {% for c in cal_berkas %}
                                     <tr>
-                                        <td class="text-center">{{ c['nama'].upper() }}</td>
-                                        <td class="text-center bg-yellow disabled color-palette">{{ c['tunggakan'] + c['selesai'] }}</td>
-                                        <td class="text-center">{{ c['tunggakan'] }}</td>
-                                        <td class="text-center bg-green disabled color-palette">{{ c['selesai'] }}</td>
+                                        <td class="text-center" style="border-width: 1px;">{{ c['nama'].upper() }}</td>
+                                        <td class="text-center" style="border-width: 1px;">{{ c['tunggakan'] + c['selesai'] }}</td>
+                                        <td class="text-center" style="border-width: 1px;">{{ c['tunggakan'] }}</td>
+                                        <td class="text-center" style="border-width: 1px;">{{ c['selesai'] }}</td>
                                     </tr>
                                     {% end %}
                                 {% end %}
